[workspace]

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-coregraphics",
    "piet-direct2d",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg",
    "piet-pathfinder"
]

default-members = [
    "piet",
    "piet-common",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

[patch.crates-io]
pathfinder_geometry = { path = "../pathfinder/geometry" }
pathfinder_simd = { path = "../pathfinder/simd" }
