[package]
name = "piet-pathfinder"
version = "0.1.0"
authors = [
    "Richard Dodd <richard.o.dodd@gmail.com>",
    "Pedro Yamada <tacla.yamada@gmail.com>"
]
description = "Pathfinder backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api", "wasm"]

[dependencies]
piet = { version = "^0.4", path = "../piet" }
pathfinder_renderer = { version = "^0.5", path = "../../pathfinder/renderer" }
pathfinder_gl = { version = "^0.5", path = "../../pathfinder/gl" }
pathfinder_canvas = { version = "^0.5", features = ["pf-text"], path = "../../pathfinder/canvas" }
pathfinder_text = { version = "^0.5", path = "../../pathfinder/text" }
pathfinder_geometry = { version = "^0.5", path = "../../pathfinder/geometry" }
pathfinder_color = { version = "^0.5", path = "../../pathfinder/color" }
pathfinder_resources = { version = "^0.5", path = "../../pathfinder/resources" }
pathfinder_content = { version = "^0.5", path = "../../pathfinder/content" }
image = "^0.23"
skribo = { version = "^0.2", path = "../../skribo" }
font-kit = "^0.10"

[dev-dependencies]
pathfinder_gpu = { path = "../../pathfinder/gpu" }
piet = { version = "^0.4", path = "../piet", features = ["samples"] }
png = "0.16.2"
gl = "0.14"
surfman = "^0.4.3"
euclid = "^0.20"